# YORESA

./: La_fiesta_del_codigo.R  PERIODOGRAM.py  Stack_insar.py  descomposicion_seriesdetiempo.ipynb  estadisticas_series_temporales_.csv  indices_periodograma.py  main.py  preparacion_datos.ipynb  pyproject.toml
Codigos/: 00_Raster_Stack.r  01_Gestion_gdf.py  03_Calculate_periodogram.py  04_1_ACF.py
Codigos_FEB/: 00_Stacking_coherence.R  01_Gestion_gdf.py  02_Extract_point_values.r  04_TS_stats.py
KJON_DSASTR/: Stack.py  perio.r
