[project]
name = "yoresa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2026.1.2",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pyodbc>=5.3.0",
    "rioxarray>=0.21.0",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
]
